@@ -1,3 +1,8 @@
+2001-01-06  Mark Kettenis  <kettenis@gnu.org>
+
+	* sysdeps/mach/hurd/readdir64.c: New file.
+	* sysdeps/mach/hurd/readdir64_r.c: New file.
+
 2001-01-07  Mark Kettenis  <kettenis@gnu.org>
 
 	* sysdeps/mach/hurd/fstatvfs.c (fstatvfs): Add comment about
